# vhenncoin_core

./: .env  .gitignore  Cargo.toml  Dockerfile  Readme.md  Rocket.toml  client.py  client2.py  client3.py  db_diagram.drawio  deploy.bat  http_client.py  my_db.redb  noom.redb  readme.md  server_list.json  tcp.py  white paper.txt  white_paper.txt
blockchain_db/: conf  db  snap.00000000000003A0  snap.0000000000066DEC
id_data/: user_data.redb
src/: main.rs
src/blockchain/: broadcast.rs  chain.rs  concensus.rs  digital_id.rs  handlers.rs  kv_service.rs  kv_service2.rs  kv_store.rs  mod.rs  mongo_store.rs  node.rs  transfer.rs  wallet.rs
src/controllers/: mod.rs  sample_controller.rs  wallet_controller.rs
src/handlers/: handlers.rs
src/middlewares/: auth_middleware.rs
src/models/: account.rs  balance_pack.rs  block.rs  constants.rs  db.rs  mempool.rs  mod.rs  request.rs  response.rs  server_list.rs  transaction.rs  transactions_log.rs  user_id.rs  wallet.rs
src/req_models/: mod.rs  wallet_requests.rs
src/utils/: app_error.rs  constants.rs  env.rs  formatter.rs  mod.rs  response.rs  struct_h.rs  test.rs  time.rs  utils.rs
test_servers/server1/: .env  server_list.json
test_servers/server2/: .env  server_list.json
test_servers/server3/: .env  server_list.json
test_servers/server4/: .env  server_list.json
