[package]
name = "Vhenn_coin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.0"
actix-web-validator = "5.0.1"
awc = "3.4.0"
base64 = "0.21.2"
bigdecimal = "0.4.0"
chrono = "0.4.23"
dotenv = "0.15.0"
env-file-reader = "0.3.0"
env_logger = "0.10.0"

futures = "0.3.25"
futures-util = "0.3.26"
handlebars = "4.3.6"
hex-literal = "0.4.1"
hkdf = "0.12.4"
hyper = {version = "1.2.0", features = ["full"]}
itertools = "0.12.1"
jsonwebtoken = "8.2.0"
lazy_static = "1.4.0"
lettre = "0.10.1"
log = "0.4"
log4rs = "1.2.0"
miniserde = "0.1.39"
mongodb = "2.3.1"
once_cell = "1.19.0"
r2d2 = "0.8.10"
r2d2-mongodb = "*"
rand = "0.8.5"
regex = "1.7.1"
reqwest = {version = "0.12.0" , features=["default", "cookies", "json", "socks"]}
ring = "0.16.20"
rsa = "0.9.2"
#rocksdb = "0.21.0"
serde = {version = "1.0.152",features = ["derive"]}
serde_as = "0.0.1"
serde_derive = "1.0.152"
serde_json = "1.0.91"
sha2 = "0.10.8"
sha256 = "1.2.2"
tokio = {version = "1.36.0", features = ["full"]}
unique = "0.9.1"
uuid = "1.4.1"
validator = {version ="0.16.0", features = ["derive"] }
