[package]
name = "vhenncoin"
version = "1.0.0"
edition = "2021"


[[bin]]
name = "vhenncoin_1_0_0"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.0"
actix-web-validator = "5.0.1"
awc = "3.4.0"
base64 = "0.21.2"
bigdecimal = {version ="0.4.0", features = ["serde"] }
chrono = "0.4.23"
dotenv = "0.15.0"
env-file-reader = "0.3.0"
env_logger = "0.11.5"

futures = "0.3.25"
futures-util = "0.3.26"
get_if_addrs = "0.5.3"
handlebars = "4.3.6"
hex-literal = "0.4.1"
hkdf = "0.12.4"
hyper = {version = "1.2.0", features = ["full"]}
itertools = "0.12.1"
jsonwebtoken = "8.2.0"
k256 = { version = "0.13.3", features = ["ecdsa"] }
lazy_static = "1.4.0"
lettre = "0.10.1"
log = "0.4.22"
log4rs = "1.2.0"
miniserde = "0.1.39"
mongodb = "2.3.1"
num-traits = "0.2.19"
once_cell = "1.19.0"
#openssl-sys = "0.9.103"
r2d2 = "0.8.10"
r2d2-mongodb = "*"
rand = "0.8.5"
rand_chacha = "0.3.1"
redb = "2.1.1"
regex = "1.7.1"
reqwest = {version = "0.12.0" , features=["default", "cookies", "json", "socks"]}
ring = "0.16.20"
rsa = "0.9.2"
#rocksdb = "0.21.0"
serde = {version = "1.0.152",features = ["derive"]}
serde_derive = "1.0.152"
serde_json = "1.0.91"
sha2 = "0.10.8"
sha256 = "1.2.2"
strum_macros = "0.26.4"
tokio = {version = "1.36.0", features = ["full"]}
unique = "0.9.1"
uuid = "1.4.1"
validator = {version ="0.16.0", features = ["derive"] }
walkdir = "2.5.0"
zip = "2.1.3"
hex = "0.3.2"
thiserror = "1.0.64"
