[package]
name = "vhenncoin"
version = "1.0.0"
edition = "2021"


[[bin]]
name = "vhenncoin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = "4.3.0"
base64 = "0.21.2"
bigdecimal = {version ="0.4.0", features = ["serde"] }
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
hex-literal = "0.4.1"
k256 = { version = "0.13.3", features = ["ecdsa"] }
lazy_static = "1.4.0"
log = "0.4.22"
log4rs = "1.2.0"
once_cell = "1.19.0"
serde = {version = "1.0.152",features = ["derive"]}
serde_derive = "1.0.152"
serde_json = "1.0.91"
sha2 = "0.10.8"
sha256 = "1.2.2"
uuid = {version = "1.17.0", features = ["v4"]}
validator = {version ="0.16.0", features = ["derive"] }
hex = "0.3.2"
thiserror = "1.0.64"
anyhow = "1.0.89"
sled = "0.34.7"
tokio = "1.45.0"

